[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id=1]
[ext_resource type="Script" path="res://scripts/board_view.gd" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BoardPanel" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(700, 520)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BoardView" type="Control" parent="HBoxContainer/BoardPanel"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")

[node name="SidePanel" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(360, 0)
size_flags_horizontal = 1
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="HBoxContainer/SidePanel"]
text = "40kAI Viewer (Godot)"

[node name="StatusLabel" type="Label" parent="HBoxContainer/SidePanel"]
text = "Ожидание состояния…"

[node name="GameTitle" type="Label" parent="HBoxContainer/SidePanel"]
text = "Запуск игры"

[node name="ModelPathLabel" type="Label" parent="HBoxContainer/SidePanel"]
text = "Путь к модели (.pickle) или None"

[node name="ModelPathLineEdit" type="LineEdit" parent="HBoxContainer/SidePanel"]
placeholder_text = "None"
text = "None"

[node name="GuiCheck" type="CheckButton" parent="HBoxContainer/SidePanel"]
text = "Запускать с GUI (play.py)"

[node name="ButtonsRow" type="HBoxContainer" parent="HBoxContainer/SidePanel"]
theme_override_constants/separation = 8

[node name="StartButton" type="Button" parent="HBoxContainer/SidePanel/ButtonsRow"]
size_flags_horizontal = 3
text = "Старт"

[node name="StopButton" type="Button" parent="HBoxContainer/SidePanel/ButtonsRow"]
size_flags_horizontal = 3
text = "Стоп"

[node name="ProcessLabel" type="Label" parent="HBoxContainer/SidePanel"]
text = "Процесс: не запущен"

[node name="UnitsTitle" type="Label" parent="HBoxContainer/SidePanel"]
text = "Юниты"

[node name="UnitsLabel" type="RichTextLabel" parent="HBoxContainer/SidePanel"]
custom_minimum_size = Vector2(0, 200)
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content = true
scroll_active = true
bbcode_enabled = true
text = "—"

[node name="LogTitle" type="Label" parent="HBoxContainer/SidePanel"]
text = "Логи"

[node name="LogLabel" type="RichTextLabel" parent="HBoxContainer/SidePanel"]
custom_minimum_size = Vector2(0, 240)
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_active = true
bbcode_enabled = true
text = "—"
